--- a/amazon-sqs/sqs-springboot/pom.xml
+++ b/amazon-sqs/sqs-springboot/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>techtabu.aws.java</groupId>
-		<artifactId>aws-java-examples</artifactId>
+		<groupId>techtabu.aws.sqs</groupId>
+		<artifactId>amazon-sqs</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
