--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,39 @@
 
         <java.version>11</java.version>
 
+        <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
+        <aws.sdk.version>2.10.43</aws.sdk.version>
+        <springfox.swagger.version>2.9.2</springfox.swagger.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
     </properties>
 
     <modules>
+        <module>amazon-s3</module>
         <module>amazon-sqs</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>bom</artifactId>
+                <version>${aws.sdk.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${springfox.swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${springfox.swagger.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <pluginManagement>
