updated spring boot and aws sdk versions

--- a/amazon-dynamodb/dynamodb-springboot/src/main/resources/application.yaml
+++ b/amazon-dynamodb/dynamodb-springboot/src/main/resources/application.yaml
@@ -5,6 +5,15 @@ server:
 dynamodb:
   local: true
 
+springdoc:
+  show-actuator: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 ---
 spring:
   config:
