--- a/amazon-dynamodb/dynamodb-springboot/pom.xml
+++ b/amazon-dynamodb/dynamodb-springboot/pom.xml
@@ -9,8 +9,8 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>techtabu.aws.java</groupId>
     <artifactId>dynamodb-springboot</artifactId>
+    <groupId>techtabu.aws.dynamodb</groupId>
     <version>0.1.0-SNAPSHOT</version>
 
     <properties>
@@ -20,6 +20,15 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
